# DeepSushi

./: .gitattributes  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/backend/: .env.example  __main__.py  app.py  server.py
src/backend/app/routes/: ping.py
src/backend/blueprints/: default.py
src/backend/blueprints/cities/: cities_menu.py
src/backend/blueprints/delivery_menu/: bento.py  delivery_menu.py  desserts.py  hot_rolls.py  juices.py  kebab.py  menu_for_kids.py  noodles.py  onigiri.py  pizza_burgers.py  rolls.py  salats.py  sashimi.py  sausages.py  seafood.py  sets.py  soup.py  sushi.py
src/backend/blueprints/promotions/: promotions.py
src/backend/config/: config_setup.py  logger_setup.py  main_settings.py  settings.py
src/backend/models/: models.py
src/backend/templates/: index.html
src/backend/utils/: http.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/components/Footer/: Footer.css  Footer.jsx
src/frontend/components/Header/: Header.css  Header.jsx
src/frontend/components/Layout/: Layout.jsx
src/frontend/components/Main/: Main.jsx
src/frontend/components/MenuCard/: MenuCard.css  MenuCard.jsx
src/frontend/components/MenuDostavki/: MenuDostavki.jsx
src/frontend/components/MenuSortBar/: MenuSortBar.css  MenuSortBar.jsx
src/frontend/components/PromotionCard/: PromotionCard.css  PromotionCard.jsx
src/frontend/components/SideBar/: SideBar.css  SideBar.jsx
src/frontend/src/: App.jsx  font.css  index.css  main.jsx
src/frontend/vite-project/: package-lock.json
(+66 files in other folders)
