[tool.poetry]
name = "deepsushi"
version = "0.1.0"
description = ""
authors = ["D. Adamson <0xwebmilk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
click = "^8.1.7"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-migrate = "^4.0.7"
flask-script = "^2.0.6"
flask-sqlalchemy = "^3.1.1"
greenlet = "^3.1.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
mako = "^1.3.6"
markupsafe = "^3.0.2"
psycopg2 = "^2.9.10"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-editor = "^1.0.4"
six = "^1.16.0"
sqlalchemy = "^2.0.36"
werkzeug = "^3.1.3"
python-decouple = "^3.8"
pydantic = "^2.9.2"
python-utils = "^3.9.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
